clusters/home/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
  labels: { app: gatus }
spec:
  selector: { app: gatus }
  ports:
    - { name: http, port: 8080, targetPort: http }
